integration/infrastructure/kyverno-policies/verify-images.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: verify-images
spec:
  background: true
  rules:
  - match:
      resources:
        kinds:
        - Pod
    name: verify-notary-signature
    verifyImages:
    - imageReferences:
      - ghcr.io/kubeconchina2023/test-verify-image*
      type: Notary
      attestors:
      - count: 1
        entries:
        - certificates:
            # cert: |-
            #   -----BEGIN PUBLIC KEY-----
            #   MFkwEwYHKoZIzj0CAQYIKoZIzj0DAQcDQgAE8nXRh950IZbRj8Ra/N9sbqOPZrfM
            #   5/KAQN0/KjHcorm/J5yctVd7iEcnessRQjU917hmKO6JWVGHpDguIyakZA==
            #   -----END PUBLIC KEY-----
            cert: |-
              -----BEGIN CERTIFICATE-----
              MIIDWTCCAkGgAwIBAgICALswDQYJKoZIhvcNAQELBQAwWzELMAkGA1UEBhMCVVMx
[...]
              -----END CERTIFICATE-----
      mutateDigest: true
      required: true
      verifyDigest: true
  validationFailureAction: Enforce
  webhookTimeoutSeconds: 30
